--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-router": "^4.1.1",
+    "react-scripts": "1.0.10",
+    "react-keeper": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,6 +19,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "react-router-dom": "^4.1.1"
   }
 }
